# ros2-basics

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_first_pkg/lib/my_first_pkg/: monitor_node  my_node  my_params  my_service_client  my_service_server  my_sub  sensor_node
install/my_first_pkg/share/my_first_pkg/: package.sh  package.xml
install/my_first_pkg/share/my_first_pkg/launch/: my_system.launch.py  robot_system.launch.py
install/my_first_pkg_interfaces/share/my_first_pkg_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_first_pkg_interfaces/share/my_first_pkg_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_my_first_pkg_interfaces__rosidl_generator_cExport-noconfig.cmake  export_my_first_pkg_interfaces__rosidl_generator_cExport.cmake  export_my_first_pkg_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_my_first_pkg_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  my_first_pkg_interfaces__rosidl_typesupport_cExport-noconfig.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/my_first_pkg_interfaces/share/my_first_pkg_interfaces/msg/: MyData.json
log/: latest_build
rosbag2_2026_04_28-03_46_22/: metadata.yaml  rosbag2_2026_04_28-03_46_22_0.mcap
sensor_test/: metadata.yaml  rosbag2_2026_04_28-03_50_02_0.mcap
src/my_first_pkg/: CMakeLists.txt  setup.py
src/my_first_pkg/my_first_pkg/: my_service_server.py  my_subscriber.py
src/my_first_pkg_interfaces/: CMakeLists.txt
(+14 files in other folders)
